# FkeMark

./: .gitignore  AGENTS.md  FkeMark-roadmap.md  LICENSE  README.md  femark-optimized.html  index.html  markdown.md  package-lock.json  package.json  prototype_index.html  tailwind.config.js  tailwind.config.mjs  tauri.conf.json  tsconfig.json  vite.config.ts  设计文档0.md
.github/: changelog.yml
.github/workflows/: build.yml  dev.yml  release.yml
.project-memory/memory/: 2026-07-15.md  2026-07-16.md  2026-07-18.md  2026-07-19.md  2026-07-21.md  2026-07-22.md  2026-07-23.md  2026-07-24.md  MEMORY.md
.workbuddy/memory/: 2026-07-15.md  2026-07-16.md  2026-07-17.md  2026-07-18.md  2026-07-19.md  2026-07-20.md  2026-07-21.md  2026-07-22.md  2026-07-23.md  MEMORY.md
doc/: README.md  index.md  package-lock.json  package.json
doc/.vitepress/: config.mts
doc/.vitepress/theme/: custom.css  index.ts
doc/en/: index.md
doc/en/guide/: changelog.md  deploy.md  editing.md  features.md  index.md  install.md  settings.md  shortcuts.md  syntax.md  theme.md  toolbar.md  usage.md
doc/guide/: changelog.md  deploy.md  editing.md  features.md  index.md  install.md  settings.md  shortcuts.md  syntax.md  theme.md  toolbar.md  usage.md
doc/public/: _headers
doc/public/theme/: fkemark-vellum.css
icons/: icon.icns
scripts/: build.cjs  gen-icons.cjs
src/: App.tsx  index.css  main.tsx  splash.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: file_system.rs  lib.rs  main.rs  markdown.rs  settings.rs  updater.rs
src-tauri/src/file_system/: assets.rs  entries.rs  search.rs  trash.rs  version_history.rs
src/app/: AppLayout.tsx  appDefaults.ts  useAppTabs.ts  useAppUpdates.ts  useCurrentEditorContent.ts  useSidebarResize.ts
src/components/: AboutPage.tsx  BacklinksPanel.tsx  CommandPalette.tsx  ConfirmDialog.tsx  Editor.tsx  EmptyState.tsx  FindReplaceBar.tsx  ImageManagerPanel.tsx  Onboarding.tsx  RecycleBinPanel.tsx  Select.tsx  SettingsPanel.tsx  Sidebar.tsx  SlashMenu.tsx  TabBar.tsx  ToastCenter.tsx  TopBar.tsx  WelcomeScreen.tsx
src/components/ai/: AiChatSidebar.tsx
src/components/editor/: AiAssistant.tsx  AiSelectionButton.tsx  EditorLayout.tsx  Minimap.tsx  (+20 more)
src/hooks/: useTauriWindow.ts  useUpdater.ts
src/i18n/: index.tsx  locales.ts
src/lib/: lowlight.ts
src/providers/: ThemeProvider.tsx
src/styles/: about.css  ai-chat.css  backlinks.css  components.css  editor.css  forms.css  image-manager.css  layout.css  markdown.css  menus.css  misc.css  onboarding.css  overlays.css  presentation.css  search.css  sidebar.css  snippets.css  statusbar.css  tabs.css  titlebar.css  variables.css  version-history.css
src/types/: global.d.ts  index.ts
src/utils/: aiAssistant.ts  asset.ts  documentStats.ts  exportFormats.ts  fonts.ts  imageManager.ts  imageUpload.ts  importExport.ts  keymap.ts  markdown.engine.ts  markdown.metadata.ts  markdown.third.ts  markdown.ts  performance.ts  popupPosition.ts  snippets.ts  spellCheck.ts  tauri.ts  themes.ts  toast.ts  toolbar.ts  updater.ts  versionHistory.ts
tests/: ai.assistant.test.ts  ai.chat.test.tsx  backlinks.panel.test.tsx  core.test.ts  editor.interactions.test.tsx  editor.performance.test.tsx  export.formats.test.ts  footnote.editor.test.ts  image.manager.test.ts  image.upload.test.ts  markdown.metadata.test.ts  markdown.roundtrip.test.ts  markdown.third.roundtrip.test.ts  presentation.mode.test.tsx  snippets.test.tsx  spell.check.test.ts  statusbar.stats.test.ts  toolbar.layout-editor.test.tsx  toolbar.settings.test.ts  updater.test.ts  version.history.test.tsx  wiki.link.picker.test.tsx  wiki.links.test.ts
(+43 files in other folders)
