[package]
name = "fke-mark"
version = "0.1.0"
description = "一款无数据库、文件系统优先、高颜值的极简 Markdown 混合即时渲染编辑器"
authors = ["fantasyke"]
repository = "https://github.com/fantasy-ke/FkeMark"
edition = "2021"

[features]
custom-protocol = ["tauri/custom-protocol"]

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["custom-protocol", "fs-create-dir", "fs-exists", "fs-read-file", "fs-remove-dir", "fs-remove-file", "fs-write-file", "shell-open", "window-close", "window-hide", "window-maximize", "window-minimize", "window-show", "window-start-dragging", "window-unmaximize", "dialog-all", "system-tray", "http-request"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["fs", "io-util"] }
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
notify = "6.1"
font-kit = "0.11"
regex = "1.10"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
