[package]
name = "fke-mark"
version = "0.1.1"
description = "一款无数据库、文件系统优先、高颜值的极简 Markdown 混合即时渲染编辑器"
authors = ["fantasyke"]
repository = "https://github.com/fantasy-ke/FkeMark"
edition = "2021"

[lib]
name = "fke_mark_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
custom-protocol = ["tauri/custom-protocol"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "devtools"] }
tauri-plugin-single-instance = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-http = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-fs = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["fs", "io-util"] }
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
notify = "6.1"
font-kit = "0.11"
regex = "1.10"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
